--- a/FEE -1/prospect.html
+++ b/FEE -1/prospect.html
@@ -17,7 +17,7 @@
                 </div>
                 <div>
                     <h1 class="profile_name">
-                        <span class="Fname">Deepanshu baby</span>
+                        <span class="Fname">Deepanshu</span>
                         <span class="Lname">Jindal</span> 
                     </h1>
                     <p class="profile_title">B.E. CSE Student </p>
